--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/sonyalivarenko/express-mesto-gha.git"
   },
-  "author": "",
+  "author": "Lyvarenko Sofia",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sonyalivarenko/express-mesto-gha/issues"
